--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,7 @@
     <title>Halogen ECharts Example</title>
   </head>
   <body>
+    <div id="example-chart" style="height: 400px"></div>
     <script src="../bower_components/echarts/build/dist/echarts-all.js"></script>
     <script src="Main.js"></script>
   </body>
